# chesslrcontroller

./: CMakeLists.txt  README.md  build.bat
src/main/cpp/: chessaction.hpp  chessmove.hpp  controller.cpp  test.cpp
src/main/java/: ChessConnector.java  EchoServer.java
